added more styles to pricing page

--- a/princing.html
+++ b/princing.html
@@ -39,10 +39,6 @@
         </div>
     </header>
     <main>
-
-
-
-
         <section class="">
             <div class="container">
                 <div class="pricing__description">
@@ -56,38 +52,63 @@
                             <li class="trigger" data-target="#Pro">Pro</li>
                             <li class="trigger" data-target="#business">Business</li>
                         </ul>
-                          <div id="about" class="content card active">
-                            <h5>Basic</h5>
-                            <p>$9/month</p>
-                            <p>For individuals and small teams</p>
-                            <a class="card__btn" href="">Get started with basic</a>
-                          </div>
-                          <div  id="pro" class="content card">
-                            <h5>Pro</h5>
-                            <p>$19/month</p>
-                            <p>For individuals and small teams</p>
-                            <a class="card__btn href="">Get started with basic</a>
-                          </div>
-                          <div id="business" class="content card">
-                            <h5>Business</h5>
-                            <p>$99/month</p>
-                            <p>For individuals and small teams</p>
-                            <a class="card__btn  href="">Get started with basic</a>
-                          </div>
+                            <div class="tab__cards">
+                                <div id="about" class="content card active">
+                                <h5>Basic</h5>
+                                <p>$9/month</p>
+                                <p>For individuals and small teams</p>
+                                <a class="card__btn" href="">Get started with basic</a>
+                                </div>
+                                <div  id="pro" class="content card">
+                                <h5>Pro</h5>
+                                <p>$19/month</p>
+                                <p>For individuals and small teams</p>
+                                <a class="card__btn href="">Get started with basic</a>
+                                </div>
+                                <div id="business" class="content card">
+                                <h5>Business</h5>
+                                <p>$99/month</p>
+                                <p>For individuals and small teams</p>
+                                <a class="card__btn  href="">Get started with basic</a>
+                                </div>
+                            </div>
                     </div>
                     <div class="features">
                         <h4>compared features</h4>
-                        <div >
+                        <div>
+                            <p>Basic</p>
+                            <p>Pro</p>
+                            <p>Business</p>
+                        </div>
+                        <div class="features__description">
                             <div class="basic__features">
                                 <ul>
+                                    <li>Process analitcs</li>
+                                    <li>task management</li>
+                                    <li>time tracking</li>
+                                    <li>Perfomance Metrics</li> 
                                 </ul>
                             </div>
                             <div class="pro">
                                 <ul>
+                                    <li>Process analitcs</li>
+                                    <li>task management</li>
+                                    <li>time tracking</li>
+                                    <li>Perfomance Metrics</li> 
+                                    <li>customizeble reports</li>
+                                    <li>email integration</li>
                                 </ul>
                             </div>
                             <div class="business__features">
                                 <ul>
+                                    <li>Process analitcs</li>
+                                    <li>task management</li>
+                                    <li>time tracking</li>
+                                    <li>Perfomance Metrics</li> 
+                                    <li>customizeble reports</li>
+                                    <li>email integration</li>
+                                    <li>Analytics DashBoard</li>
+                                    <li>Automated workflows</li>
                                 </ul>
                             </div>
                         </div>
@@ -99,7 +120,9 @@
 
         <section class="faq">
             <div class="container">
-                <img src="img/undraw_questions_re_1fy7.svg" alt="">
+                <div class="ilustration">
+                    <img class="" src="img/undraw_questions_re_1fy7.svg" alt="">
+                </div>
                 <h3>Frequently asked questions</h3>
                 <div class="questions">
                     <div class="questions">
