added style to cards and features

--- a/princing.html
+++ b/princing.html
@@ -53,29 +53,29 @@
                             <li class="trigger" data-target="#business">Business</li>
                         </ul>
                             <div class="tab__cards">
-                                <div id="about" class="content card active">
+                                <div id="basic" class="content card active">
                                 <h5>Basic</h5>
-                                <p>$9/month</p>
+                                <p>$<span>9</span>/month</p>
                                 <p>For individuals and small teams</p>
                                 <a class="card__btn" href="">Get started with basic</a>
                                 </div>
-                                <div  id="pro" class="content card">
+                                <div id="pro" class="content card ">
                                 <h5>Pro</h5>
-                                <p>$19/month</p>
-                                <p>For individuals and small teams</p>
+                                <p>$<span>19</span>/month</p>
+                                <p>For startups and growing business</p>
                                 <a class="card__btn href="">Get started with basic</a>
                                 </div>
                                 <div id="business" class="content card">
                                 <h5>Business</h5>
-                                <p>$99/month</p>
-                                <p>For individuals and small teams</p>
+                                <p>$<span>99</span>/month</p>
+                                <p>For for organizations with advanced needs</p>
                                 <a class="card__btn  href="">Get started with basic</a>
                                 </div>
                             </div>
                     </div>
                     <div class="features">
                         <h4>compared features</h4>
-                        <div>
+                        <div class="plans">
                             <p>Basic</p>
                             <p>Pro</p>
                             <p>Business</p>
