mobile menu added

--- a/princing.html
+++ b/princing.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Lnado-startup</title>
 </head>
 <body>
     <header>
@@ -22,6 +22,14 @@
                             <li class="nav__item"><a href="contactUs.html">Contact us</a></li>
                         </ul>
                     </nav>
+                </div>
+                <div  id="flyoutMenu">
+                    <li class="nav__item"><a href="index.html">Home</a></li>
+                    <li class="nav__item"><a class="current" href="princing.html">Pricing</a></li>
+                    <li class="nav__item"><a  href="about.html">About us</a></li>
+                    <li class="nav__item"><a href="contactUs.html">Contact us</a></li>
+                    <li><a href="">Log in</a></li>
+                    <li><a class="navbar__signup__btn"  href="">Sign up</a></li>
                 </div>
                 <div class="navbar__item ">
                     <ul class="nav__btns">
@@ -128,49 +136,49 @@
                     <div class="questions">
                         <li>
                             <span>how does this work?</span>
-                            <ion-icon name="chevron-down-outline"></ion-icon>
+                            <ion-icon name="arrow-down-circle-outline"></ion-icon>
                         </li>
                         <p class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim illo odit ut atque iste magni suscipit voluptates animi, minus eligendi quos quidem nulla omnis tenetur!</p>
                     </div>
                     <div class="questions">
                         <li>
                             <span>what are the benefits?</span>
-                            <ion-icon name="chevron-down-outline"></ion-icon>
+                            <ion-icon name="arrow-down-circle-outline"></ion-icon>
                         </li>
                         <p class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim illo odit ut atque iste magni suscipit voluptates animi, minus eligendi quos quidem nulla omnis tenetur!</p>
                     </div>
                     <div class="questions">
                         <li>
                             <span>is it difficult to use?</span>
-                            <ion-icon name="chevron-down-outline"></ion-icon>
+                            <ion-icon name="arrow-down-circle-outline"></ion-icon>
                         </li>
                         <p class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim illo odit ut atque iste magni suscipit voluptates animi, minus eligendi quos quidem nulla omnis tenetur!</p>
                     </div>
                     <div class="questions">
                         <li>
                             <span>Can I have custom pricing?</span>
-                            <ion-icon name="chevron-down-outline"></ion-icon>
+                            <ion-icon name="arrow-down-circle-outline"></ion-icon>
                         </li>
                         <p class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim illo odit ut atque iste magni suscipit voluptates animi, minus eligendi quos quidem nulla omnis tenetur!</p>
                     </div>
                     <div class="questions">
                         <li>
                             <span>is the trial version available?</span>
-                            <ion-icon name="chevron-down-outline"></ion-icon>
+                            <ion-icon name="arrow-down-circle-outline"></ion-icon>
                         </li>
                         <p class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim illo odit ut atque iste magni suscipit voluptates animi, minus eligendi quos quidem nulla omnis tenetur!</p>
                     </div>
                     <div class="questions">
                         <li>
                             <span>how does this work</span>
-                            <ion-icon name="chevron-down-outline"></ion-icon>
+                            <ion-icon name="arrow-down-circle-outline"></ion-icon>
                         </li>
                         <p class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim illo odit ut atque iste magni suscipit voluptates animi, minus eligendi quos quidem nulla omnis tenetur!</p>
                     </div>
                     <div class="questions">
                         <li>
                             <span>how do I sign up</span>
-                            <ion-icon name="chevron-down-outline"></ion-icon>
+                            <ion-icon name="arrow-down-circle-outline"></ion-icon>
                         </li>
                         <p class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim illo odit ut atque iste magni suscipit voluptates animi, minus eligendi quos quidem nulla omnis tenetur!</p>
                     </div>
@@ -220,6 +228,7 @@
         </div>
     </footer>
 
+    <script src="app.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
