--- a/about.html
+++ b/about.html
@@ -23,6 +23,14 @@
                         </ul>
                     </nav>
                 </div>
+                <div  id="flyoutMenu">
+                    <li class="nav__item"><a href="index.html">Home</a></li>
+                    <li class="nav__item"><a class="current" href="princing.html">Pricing</a></li>
+                    <li class="nav__item"><a  href="about.html">About us</a></li>
+                    <li class="nav__item"><a href="contactUs.html">Contact us</a></li>
+                    <li><a href="">Log in</a></li>
+                    <li><a class="navbar__signup__btn"  href="">Sign up</a></li>
+                </div>
                 <div class="navbar__item ">
                     <ul class="nav__btns">
                         <li><a href="">Log in</a></li>
@@ -158,6 +166,7 @@
         </div>
     </footer>
 
+    <script src="app.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
