added style to flyout menu

--- a/princing.html
+++ b/princing.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Lnado-startup</title>
+    <title>Lando-startup</title>
 </head>
 <body>
     <header>
@@ -133,49 +133,49 @@
                 </div>
                 <h3>Frequently asked questions</h3>
                 <div class="questions">
-                    <div class="questions">
+                    <div class="question">
                         <li>
                             <span>how does this work?</span>
                             <ion-icon name="arrow-down-circle-outline"></ion-icon>
                         </li>
                         <p class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim illo odit ut atque iste magni suscipit voluptates animi, minus eligendi quos quidem nulla omnis tenetur!</p>
                     </div>
-                    <div class="questions">
+                    <div class="question">
                         <li>
                             <span>what are the benefits?</span>
                             <ion-icon name="arrow-down-circle-outline"></ion-icon>
                         </li>
                         <p class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim illo odit ut atque iste magni suscipit voluptates animi, minus eligendi quos quidem nulla omnis tenetur!</p>
                     </div>
-                    <div class="questions">
+                    <div class="question">
                         <li>
                             <span>is it difficult to use?</span>
                             <ion-icon name="arrow-down-circle-outline"></ion-icon>
                         </li>
                         <p class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim illo odit ut atque iste magni suscipit voluptates animi, minus eligendi quos quidem nulla omnis tenetur!</p>
                     </div>
-                    <div class="questions">
+                    <div class="question">
                         <li>
                             <span>Can I have custom pricing?</span>
                             <ion-icon name="arrow-down-circle-outline"></ion-icon>
                         </li>
                         <p class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim illo odit ut atque iste magni suscipit voluptates animi, minus eligendi quos quidem nulla omnis tenetur!</p>
                     </div>
-                    <div class="questions">
+                    <div class="question">
                         <li>
                             <span>is the trial version available?</span>
                             <ion-icon name="arrow-down-circle-outline"></ion-icon>
                         </li>
                         <p class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim illo odit ut atque iste magni suscipit voluptates animi, minus eligendi quos quidem nulla omnis tenetur!</p>
                     </div>
-                    <div class="questions">
+                    <div class="question">
                         <li>
                             <span>how does this work</span>
                             <ion-icon name="arrow-down-circle-outline"></ion-icon>
                         </li>
                         <p class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim illo odit ut atque iste magni suscipit voluptates animi, minus eligendi quos quidem nulla omnis tenetur!</p>
                     </div>
-                    <div class="questions">
+                    <div class="question">
                         <li>
                             <span>how do I sign up</span>
                             <ion-icon name="arrow-down-circle-outline"></ion-icon>
