added current class to the proper nav item

--- a/about.html
+++ b/about.html
@@ -25,9 +25,9 @@
                 </div>
                 <div  id="flyoutMenu">
                     <li class="nav__item"><a href="index.html">Home</a></li>
-                    <li class="nav__item"><a class="current" href="princing.html">Pricing</a></li>
-                    <li class="nav__item"><a  href="about.html">About us</a></li>
-                    <li class="nav__item"><a href="contactUs.html">Contact us</a></li>
+                    <li class="nav__item"><a href="princing.html">Pricing</a></li>
+                    <li class="nav__item"><a href="about.html">About us</a></li>
+                    <li class="nav__item"><a href="contactUs.html" class="current">Contact us</a></li>
                     <li><a href="">Log in</a></li>
                     <li><a class="navbar__signup__btn"  href="">Sign up</a></li>
                 </div>
