--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                     </nav>
                 </div>
                 <div  id="flyoutMenu">
-                    <li class="nav__item"><a href="index.html">Home</a></li>
-                    <li class="nav__item"><a class="current" href="princing.html">Pricing</a></li>
+                    <li class="nav__item"><a class="current" href="index.html">Home</a></li>
+                    <li class="nav__item"><a  href="princing.html">Pricing</a></li>
                     <li class="nav__item"><a  href="about.html">About us</a></li>
                     <li class="nav__item"><a href="contactUs.html">Contact us</a></li>
                     <li><a href="">Log in</a></li>
