add functionality to the tabs

--- a/princing.html
+++ b/princing.html
@@ -56,9 +56,9 @@
                 <div class="pricing">
                     <div class="pricing__tab">
                         <ul>
-                            <li class="trigger active" data-target="#basic">Basic</li>
-                            <li class="trigger" data-target="#Pro">Pro</li>
-                            <li class="trigger" data-target="#business">Business</li>
+                            <li class="trigger active" data-id="basic">Basic</li>
+                            <li class="trigger" data-id="Pro">Pro</li>
+                            <li class="trigger" data-id="business">Business</li>
                         </ul>
                             <div class="tab__cards">
                                 <div id="basic" class="content card active">
