solved bugs in the pro card ID

--- a/princing.html
+++ b/princing.html
@@ -57,7 +57,7 @@
                     <div class="pricing__tab">
                         <ul>
                             <li class="trigger active" data-id="basic">Basic</li>
-                            <li class="trigger" data-id="Pro">Pro</li>
+                            <li class="trigger" data-id="pro">Pro</li>
                             <li class="trigger" data-id="business">Business</li>
                         </ul>
                             <div class="tab__cards">
@@ -67,12 +67,14 @@
                                 <p>For individuals and small teams</p>
                                 <a class="card__btn" href="">Get started with basic</a>
                                 </div>
+
                                 <div id="pro" class="content card ">
                                 <h5>Pro</h5>
                                 <p>$<span>19</span>/month</p>
                                 <p>For startups and growing business</p>
                                 <a class="card__btn href="">Get started with basic</a>
                                 </div>
+
                                 <div id="business" class="content card">
                                 <h5>Business</h5>
                                 <p>$<span>99</span>/month</p>
