added answer toggle

--- a/princing.html
+++ b/princing.html
@@ -138,7 +138,7 @@
                     <div class="question">
                         <li>
                             <span>how does this work?</span>
-                            <ion-icon name="arrow-down-circle-outline"></ion-icon>
+                            <ion-icon class="arrow-down" name="arrow-down-circle-outline"></ion-icon>
                         </li>
                         <p class="answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim illo odit ut atque iste magni suscipit voluptates animi, minus eligendi quos quidem nulla omnis tenetur!</p>
                     </div>
