added more styles in pricing page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title></title>
+    <title>Lando</title>
 </head>
 <body>
     <header>
@@ -214,7 +214,7 @@
                     <div class="start__description">
                         <h3>Get start with Lando Today</h3>
                         <p>start optimizing your process today, what are you waiting?</p>
-                        <a class="signup__btn" href="">Sign up now</a>
+                        <a class="signup__b tn" href="">Sign up now</a>
                     </div>
                 </div>
             </div>
