some changes in the pricing page

--- a/princing.html
+++ b/princing.html
@@ -85,13 +85,9 @@
                     </div>
                     <div class="features">
                         <h4>compared features</h4>
-                        <div class="plans">
-                            <p>Basic</p>
-                            <p>Pro</p>
-                            <p>Business</p>
-                        </div>
                         <div class="features__description">
                             <div class="basic__features">
+                                <h4>Basic</h4>
                                 <ul>
                                     <li>Process analitcs</li>
                                     <li>task management</li>
@@ -100,6 +96,7 @@
                                 </ul>
                             </div>
                             <div class="pro">
+                                <h4>Pro</h4>
                                 <ul>
                                     <li>Process analitcs</li>
                                     <li>task management</li>
@@ -110,6 +107,7 @@
                                 </ul>
                             </div>
                             <div class="business__features">
+                                <h4>Business</h4>
                                 <ul>
                                     <li>Process analitcs</li>
                                     <li>task management</li>
