some changes in the pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Lando</title>
+    <title>Lando-startup</title>
 </head>
 <body>
     <header>
@@ -225,7 +225,7 @@
             <div class="footer__container">
                 <div class="lando">
                     <h1>lando</h1>
-                    <p><span>2021</span> &copy; all right reserved</p>
+                    <p><span>2023</span> &copy; all right reserved</p>
                 </div>
                 <div class="footer__list">
                     <li class="nav__item"><a href="">Home</a></li>
