--- a/princing.html
+++ b/princing.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta author="Celestino Trosso">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Lando-startup</title>
@@ -206,7 +207,7 @@
             <div class="footer__container">
                 <div class="lando">
                     <h1>lando</h1>
-                    <p><span>2021</span> &copy; all right reserved</p>
+                    <p><span>2023</span> &copy; all right reserved</p>
                 </div>
                 <div class="footer__list">
                     <li class="nav__item"><a href="">Home</a></li>
